Added: Data of employee added to text file